--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
 pandas
 numpy
-scikit-learn==1.4.2
-imbalanced-learn==0.12.3
+scikit-learn
+imbalanced-learn
 tensorflow
 matplotlib
 seaborn
@@ -10,3 +10,4 @@ plotly
 lightgbm
 catboost
 xgboost
+
